--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
 	"dependencies": {
 		"@prisma/client": "^2.13.1",
 		"apollo-server": "^2.19.1",
-		"graphql": "^15.4.0"
+		"bcryptjs": "^2.4.3",
+		"dotenv": "^8.2.0",
+		"graphql": "^15.4.0",
+		"jsonwebtoken": "^8.5.1"
 	},
 	"devDependencies": {
 		"@prisma/cli": "^2.13.1",
